--- a/Source Code/mynotepad.ui
+++ b/Source Code/mynotepad.ui
@@ -64,7 +64,7 @@
            <bool>true</bool>
           </property>
           <property name="autoRaise">
-           <bool>false</bool>
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -121,6 +121,52 @@
            </widget>
           </item>
          </layout>
+        </item>
+        <item>
+         <widget class="QToolButton" name="toolButton_2">
+          <property name="autoFillBackground">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset>
+            <selectedoff>:/images/Icons/cpy.jpg</selectedoff>
+            <selectedon>:/images/Icons/cpyied.png</selectedon>
+           </iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>40</width>
+            <height>40</height>
+           </size>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+          <property name="checked">
+           <bool>false</bool>
+          </property>
+          <property name="autoRepeat">
+           <bool>true</bool>
+          </property>
+          <property name="autoExclusive">
+           <bool>false</bool>
+          </property>
+          <property name="autoRepeatDelay">
+           <number>3</number>
+          </property>
+          <property name="autoRepeatInterval">
+           <number>300</number>
+          </property>
+          <property name="popupMode">
+           <enum>QToolButton::DelayedPopup</enum>
+          </property>
+          <property name="autoRaise">
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
